syntax = "proto3";

option csharp_namespace = "grpcClient";

package biDirectionalStream;

service BiDirectionalStream {
  rpc Add (stream BiDirectionalStreamRequest) returns (stream BiDirectionalStreamReply);
}

message BiDirectionalStreamRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message BiDirectionalStreamReply {
  int32 result = 1;
}